# Fractals

./: App.cpp  App.hpp  BurningShip.cpp  CMakeLists.txt  Fractal.cpp  Fractal.hpp  Julia.cpp  Mandelbrot.cpp  Mandelbrot.hpp  Newton.cpp  Newton.hpp  README.md  Settings.hpp  main.cpp
includes/: App.hpp  BurningShip.hpp  Julia.hpp  Settings.hpp
src/: App.cpp  BurningShip.cpp  Fractal.cpp  Julia.cpp  Mandelbrot.cpp  Newton.cpp  main.cpp
